feat(aula 21): imagens responsivas Revisado por: Washington

--- a/projeto/aula21.html
+++ b/projeto/aula21.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="estilo21.css">
 </head>
 <body>
-    
+   <picture>
+       <source media="(min-width:650px )" srcset="img/video-mini01.jpg">
+       <source media="(min-width:450px )" srcset="img/video-mini02.jpg">
+       <img src="img/video-mini03.jpg" alt="">
+   </picture>
 </body>
 </html>
