--- a/projeto/aula23.html
+++ b/projeto/aula23.html
@@ -8,6 +8,6 @@
     <title>Página</title>
 </head>
 <body>
-    <h1>Bem vindo ao meu site !!</h1>
+    <h1>Bem vindo ao meu site !</h1>
 </body>
 </html>
