feat(formulario devs): Formulário cadastro devs finalizado Revisado por: Washington

--- a/projeto/formulariodevs.html
+++ b/projeto/formulariodevs.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário para Devs</title>
     <link rel="stylesheet" href="estilodev.css">
+    <style>
+        @font-face {
+            font-family: 'Ausion';
+            src: url('AusionPersonalUse.otf') format('opentype');
+            font-weight: normal;
+            font-style: normal;
+        }
+    </style>
 </head>
 <body>
     <div id="container">
@@ -46,7 +54,7 @@
                     <select name="categoria">
                         <option value="jr">Júnior</option>
                         <option value="pl">Pleno</option>
-                        <option value="sr">Senior</option>
+                        <option value="sr">Sênior</option>
                     </select>
                 </label> <br><br>
                 <label>
@@ -55,14 +63,14 @@
                     <input type="checkbox"> CSS
                     <input type="checkbox"> JAVASCRIPT
                     <input type="checkbox"> PHP
-                    <input type="checkbox"> C#
+                    <input type="checkbox"> C 
                     <input type="checkbox"> PYTHON
                     <input type="checkbox" > JAVA
                 </label> <br><br>
            
                 <label>
-                    <p class="ap">Conte um pouco mais da sua experiência</p> <br>
-                    <textarea name="com" id="com" cols="60" rows="9"></textarea>
+                    <p class="ap">Conte um pouco mais da sua experiência</p> 
+                    <textarea name="com" id="com" cols="60" rows="4"></textarea>
                 </label> <br><br>
                <button id="botao">Cadastrar</button> 
             </div>   
