feat(aula 38): criando listas de descrição Revisado por: Washington

--- a/projeto/aula38.html
+++ b/projeto/aula38.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página</title>
+    <title>Social Sharing</title>
+    <link rel="stylesheet" href="estilo38.css">
 </head>
 <body>
-    
+    <dl>
+        <dt>Café</dt>
+        <dd>Geralmente ele é servido quente para o cliente</dd>
+
+        <dt>Leite</dt>
+        <dd>Geralmente ele é servido frio para o clientes</dd>
+    </dl>
+
 </body>
 </html>
